--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.0",
     "dotenv": "^16.0.2",
     "env": "^0.0.2",
     "express": "^4.18.1",
