--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "env": "^0.0.2",
     "express": "^4.18.1",
